--- a/Web.config
+++ b/Web.config
@@ -89,7 +89,7 @@
             <add invariant="System.Data.SqlServerCe.4.0" name="Microsoft® SQL Server® Compact 4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
         </DbProviderFactories>
     </system.data>
-    <connectionStrings>
+<!--    <connectionStrings>
         <add connectionString="server=tmewu210kz.database.windows.net;database=alltheaaglcweo8c;uid=AshSoftwareEngProject;Pwd=FinalYear2010" name="alltheaaglcweo8c" providerName="System.Data.SqlClient" />
-    </connectionStrings>
+    </connectionStrings>-->
 </configuration>
