--- a/AllTheAirgeadMobile/alltheairgeadmobileService/alltheairgeadmobileService.csproj
+++ b/AllTheAirgeadMobile/alltheairgeadmobileService/alltheairgeadmobileService.csproj
@@ -59,7 +59,7 @@
     </VisualStudio>
   </ProjectExtensions>
   <ItemGroup>
-      <Reference Include="Microsoft.Owin.Host.SystemWeb">
+    <Reference Include="Microsoft.Owin.Host.SystemWeb">
       <HintPath>..\packages\Microsoft.Owin.Host.SystemWeb.2.1.0\lib\net45\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.Mobile.Service">
@@ -185,9 +185,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\CustomLoginController.cs" />
+    <Compile Include="Controllers\CustomRegistrationController.cs" />
+    <Compile Include="Controllers\PublicContentController.cs" />
+    <Compile Include="Controllers\PublicHelpController.cs" />
     <Compile Include="Controllers\TodoItemController.cs" />
+    <Compile Include="DataObjects\Account.cs" />
+    <Compile Include="DataObjects\CustomLoginProviderCredentials.cs" />
+    <Compile Include="DataObjects\LoginRequest.cs" />
+    <Compile Include="DataObjects\RegistrationRequest.cs" />
     <Compile Include="DataObjects\TodoItem.cs" />
     <Compile Include="Models\alltheairgeadmobileContext.cs" />
+    <Compile Include="Models\CustomLoginProvider.cs" />
+    <Compile Include="Models\CustomLoginProviderUtils.cs" />
     <Compile Include="ScheduledJobs\SampleJob.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
