--- a/AllTheAirgeadApp/alltheairgeadApp/packages.config
+++ b/AllTheAirgeadApp/alltheairgeadApp/packages.config
@@ -5,4 +5,6 @@
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="wpa81" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="wpa81" />
   <package id="WindowsAzure.MobileServices" version="1.2.5" targetFramework="wpa81" />
+  <package id="WinRTXamlToolkit.Controls.DataVisualization.WindowsPhone" version="1.7.4.0" targetFramework="wpa81" />
+  <package id="WinRTXamlToolkit.WindowsPhone" version="1.7.4.0" targetFramework="wpa81" />
 </packages>
