Added logout. Added the ability to scale the axes individually. Added priority input box to expense page. Changed heading font

--- a/AllTheAirgeadApp/alltheairgeadApp/alltheairgeadApp.csproj
+++ b/AllTheAirgeadApp/alltheairgeadApp/alltheairgeadApp.csproj
@@ -124,6 +124,7 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Fonts\OrangeJuiceCredit.txt" />
     <Content Include="Assets\Logo.scale-240.png" />
     <Content Include="Assets\SmallLogo.scale-240.png" />
     <Content Include="Assets\SplashScreen.scale-240.png" />
@@ -146,6 +147,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="ApplicationInsights.config" />
+    <Content Include="Assets\Fonts\orangejuice.ttf" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -185,6 +187,11 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\WinRTXamlToolkit.Controls.DataVisualization.WindowsPhone.1.7.4.0\lib\wpa\WinRTXamlToolkit.Controls.DataVisualization.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <SDKReference Include="BehaviorsXamlSDKManaged, Version=12.0">
+      <Name>Behaviors SDK %28XAML%29</Name>
+    </SDKReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
