--- a/AllTheAirgeadMobile/alltheairgeadmobileService/alltheairgeadmobileService.csproj
+++ b/AllTheAirgeadMobile/alltheairgeadmobileService/alltheairgeadmobileService.csproj
@@ -195,19 +195,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\CustomLoginController.cs" />
     <Compile Include="Controllers\CustomRegistrationController.cs" />
     <Compile Include="Controllers\ExpenseController.cs" />
     <Compile Include="Controllers\PublicContentController.cs" />
     <Compile Include="Controllers\PublicHelpController.cs" />
-    <Compile Include="DataObjects\Account.cs" />
+    <Compile Include="DataObjects\CategoryDto.cs" />
     <Compile Include="DataObjects\CustomLoginProviderCredentials.cs" />
     <Compile Include="DataObjects\ExpenseDto.cs" />
     <Compile Include="DataObjects\LoginRequest.cs" />
     <Compile Include="DataObjects\RegistrationRequest.cs" />
     <Compile Include="External References\EmailValidator.cs" />
     <Compile Include="Models\alltheairgeadContext.cs" />
-    <Compile Include="Models\alltheairgeadmobileContext.cs" />
     <Compile Include="DataObjects\Catagory.cs" />
     <Compile Include="Models\CustomLoginProvider.cs" />
     <Compile Include="DataObjects\Expense.cs" />
