Changed to get categories from database instead of local. Implemented priority box. Checking for correct data input on expense.

--- a/AllTheAirgeadApp/alltheairgeadApp/alltheairgeadApp.csproj
+++ b/AllTheAirgeadApp/alltheairgeadApp/alltheairgeadApp.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Common\RelayCommand.cs" />
     <Compile Include="Common\SuspensionManager.cs" />
     <Compile Include="DataObjects\Account.cs" />
+    <Compile Include="DataObjects\Category.cs" />
     <Compile Include="DataObjects\Expense.cs" />
     <Compile Include="ItemPage.xaml.cs">
       <DependentUpon>ItemPage.xaml</DependentUpon>
