Added email check api to check for existing email. Changed minimum password length to 6 characters to match website.

--- a/AllTheAirgeadMobile/alltheairgeadmobileService/alltheairgeadmobileService.csproj
+++ b/AllTheAirgeadMobile/alltheairgeadmobileService/alltheairgeadmobileService.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\CustomLoginController.cs" />
     <Compile Include="Controllers\CustomRegistrationController.cs" />
+    <Compile Include="Controllers\EmailCheckController.cs" />
     <Compile Include="Controllers\ExpenseController.cs" />
     <Compile Include="Controllers\PublicContentController.cs" />
     <Compile Include="Controllers\PublicHelpController.cs" />
