--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 
 /AllTheAirgeadApp/packages
-/AllTheAirgeadApp/alltheairgeadApp/alltheairgeadApp.csproj.user
+/AllTheAirgeadApp/alltheairgeadApp/bin/Debug
+/AllTheAirgeadApp/alltheairgeadApp/obj/Debug
 /AllTheAirgeadApp/alltheairgeadApp.suo
 /AllTheAirgeadApp/alltheairgeadApp.v12.suo
 /AllTheAirgeadApp/SoftwareEngineeringApp2.v12.suo
+/AllTheAirgeadApp/alltheairgeadApp/alltheairgeadApp.csproj.user
 /AllTheAirgeadMobile/packages
 /AllTheAirgeadMobile/alltheairgeadmobileService/App_Data
 /AllTheAirgeadMobile/alltheairgeadmobileService/bin
