--- a/AllTheAirgeadApp/alltheairgeadApp/alltheairgeadApp.csproj
+++ b/AllTheAirgeadApp/alltheairgeadApp/alltheairgeadApp.csproj
@@ -117,6 +117,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CustomAccountService.cs" />
+    <Compile Include="Services\EmailValidator.cs" />
     <Compile Include="Services\ExpenseService.cs" />
   </ItemGroup>
   <ItemGroup>
