Added chart settings to control displaying extra categories

--- a/AllTheAirgeadApp/alltheairgeadApp/alltheairgeadApp.csproj
+++ b/AllTheAirgeadApp/alltheairgeadApp/alltheairgeadApp.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Services\CustomAccountService.cs" />
     <Compile Include="Services\EmailValidator.cs" />
     <Compile Include="Services\ExpenseService.cs" />
+    <Compile Include="Services\StyleService.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
