Added comments to mobile service

--- a/AllTheAirgeadMobile/alltheairgeadmobileService/Web.config
+++ b/AllTheAirgeadMobile/alltheairgeadmobileService/Web.config
@@ -11,14 +11,14 @@
   <connectionStrings>
     <add name="MS_TableConnectionString" connectionString="Data Source=(localdb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-alltheairgeadmobileService-20141106092009.mdf;Initial Catalog=aspnet-alltheairgeadmobileService-20141106092009;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
     <add name="MS_NotificationHubConnectionString" connectionString="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]"/>
-    <add name="alltheairgeadDB" connectionString="data source=tmewu210kz.database.windows.net,1433;initial catalog=StarterSite;persist security info=True;user id=AshSoftwareEngProject;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="alltheairgeadDB" connectionString="data source=tmewu210kz.database.windows.net,1433;initial catalog=alltheairgeadapp_db;persist security info=True;user id=AshSoftwareEngProject;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="PreserveLoginUrl" value="true"/>
     <!-- Use these settings for local development. After publishing to 
     Mobile Services, these settings will be overridden by the values specified
     in the portal. -->
-    <add key="ExistingDbConnectionString" value="Server=tcp:tmewu210kz.database.windows.net,1433;Database=StarterSite;User ID=AshSoftwareEngProject@tmewu210kz;Password=FinalYear2010;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"/>
+    <add key="ExistingDbConnectionString" value="Server=tcp:tmewu210kz.database.windows.net,1433;Database=AllTheAirgeadApp_db;User ID=AshSoftwareEngProject@tmewu210kz;Password=FinalYear2010;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"/>
     <add key="MS_MobileServiceName" value="alltheairgeadmobile"/>
     <add key="MS_MasterKey" value="Overridden by portal settings"/>
     <add key="MS_ApplicationKey" value="Overridden by portal settings"/>
